# ProjectPart2

./: CMakeLists.txt  README.md  main.cpp
files/: doFiles.cpp  testFile1.txt
internal/: methods.h
